#4 8바이트 추가, 인스트럭션 추가, callee save 추가

--- a/snuplc/Makefile
+++ b/snuplc/Makefile
@@ -11,7 +11,7 @@ PRIV_DIR=private
 DEPS=ir.h \
 		 backend.h
 SRC=ir.cpp \
-		backend.cpp
+		backend64.cpp
 MOD=scanner.cpp \
 		parser.cpp \
 		type.cpp \
