--- a/snuplc/Makefile
+++ b/snuplc/Makefile
@@ -9,9 +9,15 @@ BIN_DIR=bin
 PRIV_DIR=private
 
 DEPS=ir.h \
-		 backend.h
+		 ir2.h \
+		 opt.h \
+		 backend2.h
+#		 backend.h
 SRC=ir.cpp \
-		backend.cpp
+		ir2.cpp \
+		opt.cpp \
+		backend2.cpp
+#		backend.cpp
 MOD=scanner.cpp \
 		parser.cpp \
 		type.cpp \
