--- a/snuplc/Makefile
+++ b/snuplc/Makefile
@@ -23,6 +23,8 @@ SRC=ir.cpp \
 		opt_tco.cpp \
 		opt_ue.cpp \
 		opt.cpp \
+		backend_default.cpp \
+		backend.cpp \
 		backend64.cpp
 MOD=scanner.cpp \
 		parser.cpp \
