--- a/test/Makefile
+++ b/test/Makefile
@@ -1,10 +1,10 @@
 ROOT=..
 
 %: %.mod
-#	$(ROOT)/snuplc/snuplc 32 --ast --tac $<
-#	gcc -static -m32 -o $@ $<.s $(ROOT)/rte/IA32/IO.s $(ROOT)/rte/IA32/ARRAY.s
-	$(ROOT)/snuplc/snuplc 64 --ast --tac $<
-	gcc -static -o $@ $<.s $(ROOT)/rte/AMD64/IO.s $(ROOT)/rte/AMD64/ARRAY.s
+	$(ROOT)/snuplc/snuplc 32 --ast --tac $<
+	gcc -static -m32 -o $@ $<.s $(ROOT)/rte/IA32/IO.s $(ROOT)/rte/IA32/ARRAY.s
+#	$(ROOT)/snuplc/snuplc 64 --ast --tac $<
+#	gcc -static -o $@ $<.s $(ROOT)/rte/AMD64/IO.s $(ROOT)/rte/AMD64/ARRAY.s
 
 all:
 	@for i in *.mod; do \
